workspaces/optic-engine/src/learn_shape/snapshots/optic_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_array_bodies__primitive_array_results.snap
---
source: workspaces/optic-engine-native/src/learn_shape/result.rs
expression: "&primitive_array_results"
---
(
    Some(
        "test-id-1",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-0",
                    base_shape_id: "$string",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-1",
                    base_shape_id: "$list",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-1",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-0",
                                },
                            ),
                            consuming_parameter_id: "$listItem",
                        },
                    ),
                },
            ),
        ),
    ],
)
